# fitlog-django

./: .env.example  .gitignore  DEPLOY.md  README.md  build.sh  conftest.py  manage.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
apps/core/: apps.py  authentication.py  urls.py  views.py
apps/core/tests/: test_authentication.py  test_healthz.py
apps/foods/: admin.py  apps.py  models.py
apps/sharing/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/sharing/migrations/: 0001_initial.py  0002_enable_rls.py  0003_sharelink_owner_fk.py
apps/sharing/tests/: test_edge_cases.py  test_postgres_integration.py  test_share_links.py
config/: urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
tests/: bootstrap_prisma_schema.sql
